2003-08-12  Albert Chu  <chu11@llnl.gov> 

	* qshd_common.h, qshd_common.c: New Files.

	* qshd.c, mqshd.c: Moved common code into qshd_common.c.

	* ChangeLog: Slightly reformatted ChangeLog to conform to GNU
	standards.  Older entries will still contain their old format.

2003-08-07  Albert Chu  <chu11@llnl.gov>
	* mqshd daemon now properly uses remote hostname with PAM
	* Tagged pdsh-2-0-0-pre4
	
2003-08-04  Albert Chu  <chu11@llnl.gov>
	* Re-worked mcmd/mqcmd to handle stderr & stdout in one stream
	* Tagged pdsh-2-0-0-pre3
	
2003-07-21  Albert Chu  <chu11@llnl.gov>
	* Fixed typos in manpages.
	* Enabled PAM support in qshell & mqshell daemons
	* Updated configuration to output warning/notice
	  messages if particular modules cannot be built.
	* Tagged pdsh-2-0-0-pre2
	
2003-07-16  Albert Chu  <chu11@llnl.gov>
        * Fixed additional issues with command line options and modules
	  recognized (or not-recognized) between pdsh and pdcp.
	* Removed dependence of rcp command from pdcp.  All functionality
	  of the rcp command is now coded internaly within pdcp.  
	* Eliminated several bugs from original rcp code.
	* Fixed several pdcp bugs related to -r option.
	* Fixed pdcp access/modification time errors with -p option.
	* Updated pdcp manpage to be clearer about pdcp functionality.
	* "bsd" rcmd renamed to "rsh" rcmd 
	* Fixed scalability issues with mcmd/mqcmd file descriptors
	* Fixed scalability issues with select() by using poll()
	* Updated rcmd for new mrshd protocol 
	* Fixed possible race condition in mqcmd/mqshd
	* Tweaked configuration, makefiles, manpages, and documents for
	  readability and portability.
	
2003-06-24  Albert Chu  <chu11@llnl.gov>
	* added ability to compile modules in statically with
	  --enable-static-modules option
	* ssh no longer compiled automatically, needs --with-ssh option
	* mqshd built to be independent of net-toollib library 
	* added checks to differentiate between options/modules suitable for 
	  pdsh vs. pdcp